--- a/.env.33win2Blog
+++ b/.env.33win2Blog
@@ -2,23 +2,23 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:/X9C74lwjhjE+ir2aEUYauAV9fnGMyThsGNtr4S1ubA=
 APP_DEBUG=true
-APP_URL=http://33win2:8888
+APP_URL=https://33win2.blog
 
 IMAGE_IMG=storage/photos/
-DOMAIN_IMG=http://33win2:8888/
-FE_URL=http://33win2:8888/
-COMMON_URL=http://33win2:8888/
+DOMAIN_IMG=https://33win2.blog/
+FE_URL=https://33win2.blog/
+COMMON_URL=https://33win2.blog/
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=localhost
+DB_HOST=33win_db
 DB_PORT=3306
-DB_DATABASE=33win2
+DB_DATABASE=33win_2
 DB_USERNAME=root
-DB_PASSWORD=root
+DB_PASSWORD=Idsa32ADsaWsdawW
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
