--- a/docker-compose-33win03.blog.yml
+++ b/docker-compose-33win03.blog.yml
@@ -4,14 +4,14 @@ services:
     app:
         build:
             context: .
-            dockerfile: docker/php8.1/33winBlog/Dockerfile
-        container_name: 33win_app
+            dockerfile: docker/php8.1/33win03Blog/Dockerfile
+        container_name: 33win03_app
         working_dir: /var/www/html
         volumes:
             - ./:/var/www/html
             - app_storage:/var/www/html/storage
         ports:
-            - "80:80"
+            - "8080:80"
         networks:
             - 33win_backend
 
