--- a/docker/php8.1/33win5Org/apache.conf
+++ b/docker/php8.1/33win5Org/apache.conf
@@ -1,6 +1,6 @@
 <VirtualHost *:8082>
     ServerAdmin abc@gmail.com
-    ServerName 33win5.blog
+    ServerName 33win5.org
     DocumentRoot /var/www/html/public
 
     <Directory /var/www/html/public>
