--- a/docker/php8.1/33win5Org/Dockerfile
+++ b/docker/php8.1/33win5Org/Dockerfile
@@ -39,7 +39,7 @@ WORKDIR /var/www/html
 COPY .. /var/www/html
 
 # Copy Apache vhost file
-COPY ./docker/php8.1/33win5Blog/apache.conf /etc/apache2/sites-available/000-default.conf
+COPY ./docker/php8.1/33win5Org/apache.conf /etc/apache2/sites-available/000-default.conf
 
 # Copy entrypoint script
 COPY ./docker/php8.1/entrypoint.sh /usr/local/bin/entrypoint.sh
