--- a/docker/php8.1/33win99Org/apache.conf
+++ b/docker/php8.1/33win99Org/apache.conf
@@ -1,6 +1,6 @@
-<VirtualHost *:8086>
+<VirtualHost *:8085>
     ServerAdmin abc@gmail.com
-    ServerName 33win9.blog
+    ServerName 33win99.org
     DocumentRoot /var/www/html/public
 
     <Directory /var/www/html/public>
