--- a/docker-compose-33win99.org.yml
+++ b/docker-compose-33win99.org.yml
@@ -4,14 +4,14 @@ services:
     app:
         build:
             context: .
-            dockerfile: docker/php8.1/33win9Blog/Dockerfile
-        container_name: 33win9_app
+            dockerfile: docker/php8.1/33win99Org/Dockerfile
+        container_name: 33win99_app
         working_dir: /var/www/html
         volumes:
             - ./:/var/www/html
             - app_storage:/var/www/html/storage
         ports:
-            - "8086:80"
+            - "8085:80"
         networks:
             - 33win_backend
 
