--- a/docker/php8.1/33win03Blog/apache.conf
+++ b/docker/php8.1/33win03Blog/apache.conf
@@ -1,4 +1,4 @@
-<VirtualHost *:8080>
+<VirtualHost *:80>
     ServerAdmin abc@gmail.com
     ServerName 33win03.blog
     DocumentRoot /var/www/html/public
@@ -11,4 +11,7 @@
 
     ErrorLog ${APACHE_LOG_DIR}/error.log
     CustomLog ${APACHE_LOG_DIR}/access.log combined
+
+    ProxyPass / http://127.0.0.1:8080/
+    ProxyPassReverse / http://127.0.0.1:8080/
 </VirtualHost>
