--- a/docker/php8.1/33winBlog/apache.conf
+++ b/docker/php8.1/33winBlog/apache.conf
@@ -12,6 +12,6 @@
     ErrorLog ${APACHE_LOG_DIR}/error.log
     CustomLog ${APACHE_LOG_DIR}/access.log combined
 
-    ProxyPass / http://127.0.0.1:8087/
-        ProxyPassReverse / http://127.0.0.1:8087/
+    ProxyPass / http://33win_app:80/
+    ProxyPassReverse / http://33win_app:80/
 </VirtualHost>
