--- a/docker-compose-33win03.blog.yml
+++ b/docker-compose-33win03.blog.yml
@@ -10,8 +10,10 @@ services:
         volumes:
             - ./:/var/www/html
             - app_storage:/var/www/html/storage
-        ports:
-            - "8080:80"
+#        ports:
+#            - "8080:80"
+        expose:
+          - "80"
         networks:
             - 33win_backend
 
