--- a/docker-compose-33win2.blog.yml
+++ b/docker-compose-33win2.blog.yml
@@ -10,10 +10,8 @@ services:
         volumes:
             - ./:/var/www/html
             - app_storage:/var/www/html/storage
-#        ports:
-#            - "8087:80"
-        expose:
-          - "80"
+        ports:
+            - "8087:80"
         networks:
             - 33win_backend
 
