--- a/docker/php8.1/33winBlog/apache.conf
+++ b/docker/php8.1/33winBlog/apache.conf
@@ -1,3 +1,4 @@
+ServerName localhost
 <VirtualHost *:80>
     ServerAdmin abc@gmail.com
     ServerName 33win2.blog
@@ -13,5 +14,5 @@
     CustomLog ${APACHE_LOG_DIR}/access.log combined
 
     ProxyPass / http://33win_app:8087/
-        ProxyPassReverse / http://33win_app:8087/
+    ProxyPassReverse / http://33win_app:8087/
 </VirtualHost>
