--- a/.env.33win2Blog
+++ b/.env.33win2Blog
@@ -19,6 +19,7 @@ DB_PORT=3306
 DB_DATABASE=33win_2
 DB_USERNAME=root
 DB_PASSWORD=Idsa32ADsaWsdawW
+Idsa3dawW@A
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
